// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataFilter children 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  height: 12px;
}

.c12 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 24px;
}

.c7 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c11 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c11:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c11:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c11:focus > circle,
.c11:focus > ellipse,
.c11:focus > line,
.c11:focus > path,
.c11:focus > polygon,
.c11:focus > polyline,
.c11:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c11:focus::-moz-focus-inner {
  border: 0;
}

.c11:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c11:focus:not(:focus-visible) > circle,
.c11:focus:not(:focus-visible) > ellipse,
.c11:focus:not(:focus-visible) > line,
.c11:focus:not(:focus-visible) > path,
.c11:focus:not(:focus-visible) > polygon,
.c11:focus:not(:focus-visible) > polyline,
.c11:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c11:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

.c13 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  opacity: 0.3;
  cursor: default;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c13:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c13:focus > circle,
.c13:focus > ellipse,
.c13:focus > line,
.c13:focus > path,
.c13:focus > polygon,
.c13:focus > polyline,
.c13:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c13:focus::-moz-focus-inner {
  border: 0;
}

.c13:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c13:focus:not(:focus-visible) > circle,
.c13:focus:not(:focus-visible) > ellipse,
.c13:focus:not(:focus-visible) > line,
.c13:focus:not(:focus-visible) > path,
.c13:focus:not(:focus-visible) > polygon,
.c13:focus:not(:focus-visible) > polyline,
.c13:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c13:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

.c10 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0,0,0,0.33);
  border-radius: 4px;
  outline: none;
  border: none;
}

.c10::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c10::-moz-placeholder {
  color: #AAAAAA;
}

.c10:-ms-input-placeholder {
  color: #AAAAAA;
}

.c10::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c10::-moz-focus-inner {
  border: none;
  outline: none;
}

.c10:-moz-placeholder,
.c10::-moz-placeholder {
  opacity: 1;
}

.c9 {
  position: relative;
  width: 100%;
}

.c14 {
  opacity: 0;
}

.c2 {
  max-width: 100%;
}

.c4 {
  margin: 0px;
  font-size: 26px;
  line-height: 32px;
  max-width: 624px;
  font-weight: 600;
  overflow-wrap: break-word;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width:768px) {
  .c6 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    height: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c12 {
    width: 12px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    font-size: 22px;
    line-height: 28px;
    max-width: 528px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <form
      class="c2"
    >
      <div
        class="c1"
      >
        <header
          class="c3"
        >
          <h2
            class="c4"
          >
            Filters
          </h2>
        </header>
        <div
          class="c5"
        />
        <div
          class="c6 "
        >
          <label
            class="c7"
            for="data-name"
          >
            name
          </label>
          <div
            class="c8 FormField__FormFieldContentBox-sc-m9hood-1"
          >
            <div
              class="c9"
            >
              <input
                autocomplete="off"
                class="c10"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="c5"
        />
        <footer
          class="c3"
        >
          <button
            class="c11"
            type="submit"
          >
            Apply filters
          </button>
          <div
            class="c12"
          />
          <button
            aria-hidden="true"
            class="c13 c14"
            disabled=""
            tabindex="-1"
            type="reset"
          >
            Undo changes
          </button>
        </footer>
      </div>
    </form>
  </div>
</div>
`;

exports[`DataFilter options 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 12px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 2px rgba(0,0,0,0.15);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
}

.c5 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  height: 12px;
}

.c16 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 24px;
}

.c7 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c15 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c15:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c15:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c15:focus > circle,
.c15:focus > ellipse,
.c15:focus > line,
.c15:focus > path,
.c15:focus > polygon,
.c15:focus > polyline,
.c15:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c15:focus::-moz-focus-inner {
  border: 0;
}

.c15:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c15:focus:not(:focus-visible) > circle,
.c15:focus:not(:focus-visible) > ellipse,
.c15:focus:not(:focus-visible) > line,
.c15:focus:not(:focus-visible) > path,
.c15:focus:not(:focus-visible) > polygon,
.c15:focus:not(:focus-visible) > polyline,
.c15:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c15:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

.c17 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  opacity: 0.3;
  cursor: default;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c17:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c17:focus > circle,
.c17:focus > ellipse,
.c17:focus > line,
.c17:focus > path,
.c17:focus > polygon,
.c17:focus > polyline,
.c17:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c17:focus::-moz-focus-inner {
  border: 0;
}

.c17:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c17:focus:not(:focus-visible) > circle,
.c17:focus:not(:focus-visible) > ellipse,
.c17:focus:not(:focus-visible) > line,
.c17:focus:not(:focus-visible) > path,
.c17:focus:not(:focus-visible) > polygon,
.c17:focus:not(:focus-visible) > polyline,
.c17:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c17:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.c10:hover input:not([disabled]) + div,
.c10:hover input:not([disabled]) + span {
  border-color: #000000;
}

.c13 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c13:checked + span > span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c12 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c18 {
  opacity: 0;
}

.c2 {
  max-width: 100%;
}

.c4 {
  margin: 0px;
  font-size: 26px;
  line-height: 32px;
  max-width: 624px;
  font-weight: 600;
  overflow-wrap: break-word;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width:768px) {
  .c6 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c11 {
    margin-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c14 {
    border: solid 2px rgba(0,0,0,0.15);
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    height: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c16 {
    width: 12px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    font-size: 22px;
    line-height: 28px;
    max-width: 528px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <form
      class="c2"
    >
      <div
        class="c1"
      >
        <header
          class="c3"
        >
          <h2
            class="c4"
          >
            Filters
          </h2>
        </header>
        <div
          class="c5"
        />
        <div
          class="c6 "
        >
          <label
            class="c7"
            for="data-name"
          >
            name
          </label>
          <div
            class="c8 FormField__FormFieldContentBox-sc-m9hood-1"
          >
            <div
              class="c9 StyledCheckBoxGroup-sc-2nhc5d-0"
              id="data-name"
              role="group"
            >
              <label
                class="c10"
                label="aa"
              >
                <div
                  class="c11 c12"
                >
                  <input
                    class="c13"
                    type="checkbox"
                  />
                  <div
                    class="c14 "
                  />
                </div>
                <span>
                  aa
                </span>
              </label>
              <div
                class="c5"
              />
              <label
                class="c10"
                label="bb"
              >
                <div
                  class="c11 c12"
                >
                  <input
                    class="c13"
                    type="checkbox"
                  />
                  <div
                    class="c14 "
                  />
                </div>
                <span>
                  bb
                </span>
              </label>
              <div
                class="c5"
              />
              <label
                class="c10"
                label="cc"
              >
                <div
                  class="c11 c12"
                >
                  <input
                    class="c13"
                    type="checkbox"
                  />
                  <div
                    class="c14 "
                  />
                </div>
                <span>
                  cc
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          class="c5"
        />
        <div
          class="c6 "
        >
          <label
            class="c7"
            for="data-enabled"
          >
            Enabled
          </label>
          <div
            class="c8 FormField__FormFieldContentBox-sc-m9hood-1"
          >
            <div
              class="c9 StyledCheckBoxGroup-sc-2nhc5d-0"
              id="data-enabled"
              role="group"
            >
              <label
                class="c10"
                label="Enabled"
              >
                <div
                  class="c11 c12"
                >
                  <input
                    class="c13"
                    type="checkbox"
                  />
                  <div
                    class="c14 "
                  />
                </div>
                <span>
                  Enabled
                </span>
              </label>
              <div
                class="c5"
              />
              <label
                class="c10"
                label="Disabled"
              >
                <div
                  class="c11 c12"
                >
                  <input
                    class="c13"
                    type="checkbox"
                  />
                  <div
                    class="c14 "
                  />
                </div>
                <span>
                  Disabled
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          class="c5"
        />
        <div
          class="c6 "
        >
          <label
            class="c7"
            for="data-type.name"
          >
            Type
          </label>
          <div
            class="c8 FormField__FormFieldContentBox-sc-m9hood-1"
          >
            <div
              class="c9 StyledCheckBoxGroup-sc-2nhc5d-0"
              id="data-type.name"
              role="group"
            >
              <label
                class="c10"
                label="ZZ"
              >
                <div
                  class="c11 c12"
                >
                  <input
                    class="c13"
                    type="checkbox"
                  />
                  <div
                    class="c14 "
                  />
                </div>
                <span>
                  ZZ
                </span>
              </label>
              <div
                class="c5"
              />
              <label
                class="c10"
                label="YY"
              >
                <div
                  class="c11 c12"
                >
                  <input
                    class="c13"
                    type="checkbox"
                  />
                  <div
                    class="c14 "
                  />
                </div>
                <span>
                  YY
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          class="c5"
        />
        <footer
          class="c3"
        >
          <button
            class="c15"
            type="submit"
          >
            Apply filters
          </button>
          <div
            class="c16"
          />
          <button
            aria-hidden="true"
            class="c17 c18"
            disabled=""
            tabindex="-1"
            type="reset"
          >
            Undo changes
          </button>
        </footer>
      </div>
    </form>
  </div>
</div>
`;

exports[`DataFilter range Data 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 12px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: 100%;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  border-radius: 12px;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: visible;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #7D4CDB;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 12px;
  width: 12px;
  border-radius: 100%;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: rgba(125,76,219,0.4);
  color: #444444;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  border-radius: 12px;
}

.c5 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  height: 12px;
}

.c20 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 24px;
}

.c7 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c10 {
  margin-left: 12px;
  margin-right: 12px;
  font-size: 14px;
  line-height: 20px;
  text-align: right;
}

.c18 {
  margin-left: 12px;
  margin-right: 12px;
  font-size: 14px;
  line-height: 20px;
}

.c19 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c19:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c19:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c19:focus > circle,
.c19:focus > ellipse,
.c19:focus > line,
.c19:focus > path,
.c19:focus > polygon,
.c19:focus > polyline,
.c19:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c19:focus::-moz-focus-inner {
  border: 0;
}

.c19:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c19:focus:not(:focus-visible) > circle,
.c19:focus:not(:focus-visible) > ellipse,
.c19:focus:not(:focus-visible) > line,
.c19:focus:not(:focus-visible) > path,
.c19:focus:not(:focus-visible) > polygon,
.c19:focus:not(:focus-visible) > polyline,
.c19:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c19:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

.c21 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  opacity: 0.3;
  cursor: default;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c21:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c21:focus > circle,
.c21:focus > ellipse,
.c21:focus > line,
.c21:focus > path,
.c21:focus > polygon,
.c21:focus > polyline,
.c21:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c21:focus::-moz-focus-inner {
  border: 0;
}

.c21:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c21:focus:not(:focus-visible) > circle,
.c21:focus:not(:focus-visible) > ellipse,
.c21:focus:not(:focus-visible) > line,
.c21:focus:not(:focus-visible) > path,
.c21:focus:not(:focus-visible) > polygon,
.c21:focus:not(:focus-visible) > polyline,
.c21:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c21:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

.c12 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c22 {
  opacity: 0;
}

.c2 {
  max-width: 100%;
}

.c4 {
  margin: 0px;
  font-size: 26px;
  line-height: 32px;
  max-width: 624px;
  font-weight: 600;
  overflow-wrap: break-word;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width:768px) {
  .c6 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c13 {
    border-radius: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c17 {
    border-radius: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    height: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c20 {
    width: 12px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    font-size: 22px;
    line-height: 28px;
    max-width: 528px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <form
      class="c2"
    >
      <div
        class="c1"
      >
        <header
          class="c3"
        >
          <h2
            class="c4"
          >
            Filters
          </h2>
        </header>
        <div
          class="c5"
        />
        <div
          class="c6 "
        >
          <label
            class="c7"
            for="data-rating"
          >
            Rating
          </label>
          <div
            class="c8 FormField__FormFieldContentBox-sc-m9hood-1"
          >
            <div
              class="c9"
              id="data-rating"
            >
              <span
                class="c10"
                style="width: 0px;"
              >
                0
              </span>
              <div
                class="c11 c12"
                tabindex="-1"
              >
                <div
                  class="c13"
                  style="flex: 0 0 0px;"
                />
                <div
                  class="c14"
                  style="flex: 0 0 1px;"
                >
                  <div
                    aria-label="Lower Bounds"
                    aria-valuemax="5"
                    aria-valuemin="0"
                    aria-valuenow="0"
                    class="c15"
                    role="slider"
                    style="cursor: col-resize; outline: none; min-width: 12px; min-height: 12px; z-index: 1;"
                    tabindex="0"
                  >
                    <div
                      class="c16 EdgeControl__StyledBox-sc-1xo2yt9-0"
                    />
                  </div>
                </div>
                <div
                  class="c17"
                  style="flex: 6 0 0px; cursor: ew-resize;"
                />
                <div
                  class="c14"
                  style="flex: 0 0 1px;"
                >
                  <div
                    aria-label="Upper Bounds"
                    aria-valuemax="5"
                    aria-valuemin="0"
                    aria-valuenow="5"
                    class="c15"
                    role="slider"
                    style="cursor: col-resize; outline: none; min-width: 12px; min-height: 12px; z-index: 1;"
                    tabindex="0"
                  >
                    <div
                      class="c16 EdgeControl__StyledBox-sc-1xo2yt9-0"
                    />
                  </div>
                </div>
                <div
                  class="c13"
                  style="flex: 0 0 0px;"
                />
              </div>
              <span
                class="c18"
                style="width: 0px;"
              >
                5
              </span>
            </div>
          </div>
        </div>
        <div
          class="c5"
        />
        <footer
          class="c3"
        >
          <button
            class="c19"
            type="submit"
          >
            Apply filters
          </button>
          <div
            class="c20"
          />
          <button
            aria-hidden="true"
            class="c21 c22"
            disabled=""
            tabindex="-1"
            type="reset"
          >
            Undo changes
          </button>
        </footer>
      </div>
    </form>
  </div>
</div>
`;

exports[`DataFilter range prop 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 12px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: 100%;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  border-radius: 12px;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: visible;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #7D4CDB;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 12px;
  width: 12px;
  border-radius: 100%;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: rgba(125,76,219,0.4);
  color: #444444;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  border-radius: 12px;
}

.c5 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  height: 12px;
}

.c20 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 24px;
}

.c7 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c10 {
  margin-left: 12px;
  margin-right: 12px;
  font-size: 14px;
  line-height: 20px;
  text-align: right;
}

.c18 {
  margin-left: 12px;
  margin-right: 12px;
  font-size: 14px;
  line-height: 20px;
}

.c19 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c19:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c19:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c19:focus > circle,
.c19:focus > ellipse,
.c19:focus > line,
.c19:focus > path,
.c19:focus > polygon,
.c19:focus > polyline,
.c19:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c19:focus::-moz-focus-inner {
  border: 0;
}

.c19:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c19:focus:not(:focus-visible) > circle,
.c19:focus:not(:focus-visible) > ellipse,
.c19:focus:not(:focus-visible) > line,
.c19:focus:not(:focus-visible) > path,
.c19:focus:not(:focus-visible) > polygon,
.c19:focus:not(:focus-visible) > polyline,
.c19:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c19:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

.c21 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  opacity: 0.3;
  cursor: default;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c21:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c21:focus > circle,
.c21:focus > ellipse,
.c21:focus > line,
.c21:focus > path,
.c21:focus > polygon,
.c21:focus > polyline,
.c21:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c21:focus::-moz-focus-inner {
  border: 0;
}

.c21:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c21:focus:not(:focus-visible) > circle,
.c21:focus:not(:focus-visible) > ellipse,
.c21:focus:not(:focus-visible) > line,
.c21:focus:not(:focus-visible) > path,
.c21:focus:not(:focus-visible) > polygon,
.c21:focus:not(:focus-visible) > polyline,
.c21:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c21:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

.c12 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c22 {
  opacity: 0;
}

.c2 {
  max-width: 100%;
}

.c4 {
  margin: 0px;
  font-size: 26px;
  line-height: 32px;
  max-width: 624px;
  font-weight: 600;
  overflow-wrap: break-word;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width:768px) {
  .c6 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c13 {
    border-radius: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c17 {
    border-radius: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    height: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c20 {
    width: 12px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    font-size: 22px;
    line-height: 28px;
    max-width: 528px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <form
      class="c2"
    >
      <div
        class="c1"
      >
        <header
          class="c3"
        >
          <h2
            class="c4"
          >
            Filters
          </h2>
        </header>
        <div
          class="c5"
        />
        <div
          class="c6 "
        >
          <label
            class="c7"
            for="data-rating"
          >
            rating
          </label>
          <div
            class="c8 FormField__FormFieldContentBox-sc-m9hood-1"
          >
            <div
              class="c9"
              id="data-rating"
            >
              <span
                class="c10"
                style="width: 0px;"
              >
                0
              </span>
              <div
                class="c11 c12"
                tabindex="-1"
              >
                <div
                  class="c13"
                  style="flex: 0 0 0px;"
                />
                <div
                  class="c14"
                  style="flex: 0 0 1px;"
                >
                  <div
                    aria-label="Lower Bounds"
                    aria-valuemax="5"
                    aria-valuemin="0"
                    aria-valuenow="0"
                    class="c15"
                    role="slider"
                    style="cursor: col-resize; outline: none; min-width: 12px; min-height: 12px; z-index: 1;"
                    tabindex="0"
                  >
                    <div
                      class="c16 EdgeControl__StyledBox-sc-1xo2yt9-0"
                    />
                  </div>
                </div>
                <div
                  class="c17"
                  style="flex: 6 0 0px; cursor: ew-resize;"
                />
                <div
                  class="c14"
                  style="flex: 0 0 1px;"
                >
                  <div
                    aria-label="Upper Bounds"
                    aria-valuemax="5"
                    aria-valuemin="0"
                    aria-valuenow="5"
                    class="c15"
                    role="slider"
                    style="cursor: col-resize; outline: none; min-width: 12px; min-height: 12px; z-index: 1;"
                    tabindex="0"
                  >
                    <div
                      class="c16 EdgeControl__StyledBox-sc-1xo2yt9-0"
                    />
                  </div>
                </div>
                <div
                  class="c13"
                  style="flex: 0 0 0px;"
                />
              </div>
              <span
                class="c18"
                style="width: 0px;"
              >
                5
              </span>
            </div>
          </div>
        </div>
        <div
          class="c5"
        />
        <footer
          class="c3"
        >
          <button
            class="c19"
            type="submit"
          >
            Apply filters
          </button>
          <div
            class="c20"
          />
          <button
            aria-hidden="true"
            class="c21 c22"
            disabled=""
            tabindex="-1"
            type="reset"
          >
            Undo changes
          </button>
        </footer>
      </div>
    </form>
  </div>
</div>
`;

exports[`DataFilter renders 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 12px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 2px rgba(0,0,0,0.15);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: 100%;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  border-radius: 12px;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: visible;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #7D4CDB;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 12px;
  width: 12px;
  border-radius: 100%;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: rgba(125,76,219,0.4);
  color: #444444;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  border-radius: 12px;
}

.c5 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  height: 12px;
}

.c26 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 24px;
}

.c7 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c16 {
  margin-left: 12px;
  margin-right: 12px;
  font-size: 14px;
  line-height: 20px;
  text-align: right;
}

.c24 {
  margin-left: 12px;
  margin-right: 12px;
  font-size: 14px;
  line-height: 20px;
}

.c25 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c25:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c25:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c25:focus > circle,
.c25:focus > ellipse,
.c25:focus > line,
.c25:focus > path,
.c25:focus > polygon,
.c25:focus > polyline,
.c25:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c25:focus::-moz-focus-inner {
  border: 0;
}

.c25:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c25:focus:not(:focus-visible) > circle,
.c25:focus:not(:focus-visible) > ellipse,
.c25:focus:not(:focus-visible) > line,
.c25:focus:not(:focus-visible) > path,
.c25:focus:not(:focus-visible) > polygon,
.c25:focus:not(:focus-visible) > polyline,
.c25:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c25:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

.c27 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  opacity: 0.3;
  cursor: default;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c27:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c27:focus > circle,
.c27:focus > ellipse,
.c27:focus > line,
.c27:focus > path,
.c27:focus > polygon,
.c27:focus > polyline,
.c27:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c27:focus::-moz-focus-inner {
  border: 0;
}

.c27:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c27:focus:not(:focus-visible) > circle,
.c27:focus:not(:focus-visible) > ellipse,
.c27:focus:not(:focus-visible) > line,
.c27:focus:not(:focus-visible) > path,
.c27:focus:not(:focus-visible) > polygon,
.c27:focus:not(:focus-visible) > polyline,
.c27:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c27:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.c10:hover input:not([disabled]) + div,
.c10:hover input:not([disabled]) + span {
  border-color: #000000;
}

.c13 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c13:checked + span > span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c12 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c18 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c28 {
  opacity: 0;
}

.c2 {
  max-width: 100%;
}

.c4 {
  margin: 0px;
  font-size: 26px;
  line-height: 32px;
  max-width: 624px;
  font-weight: 600;
  overflow-wrap: break-word;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width:768px) {
  .c6 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c11 {
    margin-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c14 {
    border: solid 2px rgba(0,0,0,0.15);
  }
}

@media only screen and (max-width:768px) {
  .c19 {
    border-radius: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c23 {
    border-radius: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    height: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c26 {
    width: 12px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    font-size: 22px;
    line-height: 28px;
    max-width: 528px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <form
      class="c2"
    >
      <div
        class="c1"
      >
        <header
          class="c3"
        >
          <h2
            class="c4"
          >
            Filters
          </h2>
        </header>
        <div
          class="c5"
        />
        <div
          class="c6 "
        >
          <label
            class="c7"
            for="data-name"
          >
            name
          </label>
          <div
            class="c8 FormField__FormFieldContentBox-sc-m9hood-1"
          >
            <div
              class="c9 StyledCheckBoxGroup-sc-2nhc5d-0"
              id="data-name"
              role="group"
            >
              <label
                class="c10"
                label="aa"
              >
                <div
                  class="c11 c12"
                >
                  <input
                    class="c13"
                    type="checkbox"
                  />
                  <div
                    class="c14 "
                  />
                </div>
                <span>
                  aa
                </span>
              </label>
              <div
                class="c5"
              />
              <label
                class="c10"
                label="bb"
              >
                <div
                  class="c11 c12"
                >
                  <input
                    class="c13"
                    type="checkbox"
                  />
                  <div
                    class="c14 "
                  />
                </div>
                <span>
                  bb
                </span>
              </label>
              <div
                class="c5"
              />
              <label
                class="c10"
                label="cc"
              >
                <div
                  class="c11 c12"
                >
                  <input
                    class="c13"
                    type="checkbox"
                  />
                  <div
                    class="c14 "
                  />
                </div>
                <span>
                  cc
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          class="c5"
        />
        <div
          class="c6 "
        >
          <label
            class="c7"
            for="data-enabled"
          >
            enabled
          </label>
          <div
            class="c8 FormField__FormFieldContentBox-sc-m9hood-1"
          >
            <div
              class="c9 StyledCheckBoxGroup-sc-2nhc5d-0"
              id="data-enabled"
              role="group"
            >
              <label
                class="c10"
                label="true"
              >
                <div
                  class="c11 c12"
                >
                  <input
                    class="c13"
                    type="checkbox"
                  />
                  <div
                    class="c14 "
                  />
                </div>
                <span>
                  true
                </span>
              </label>
              <div
                class="c5"
              />
              <label
                class="c10"
                label="false"
              >
                <div
                  class="c11 c12"
                >
                  <input
                    class="c13"
                    type="checkbox"
                  />
                  <div
                    class="c14 "
                  />
                </div>
                <span>
                  false
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          class="c5"
        />
        <div
          class="c6 "
        >
          <label
            class="c7"
            for="data-rating"
          >
            rating
          </label>
          <div
            class="c8 FormField__FormFieldContentBox-sc-m9hood-1"
          >
            <div
              class="c15"
              id="data-rating"
            >
              <span
                class="c16"
                style="width: 0px;"
              >
                2.0999999999999996
              </span>
              <div
                class="c17 c18"
                tabindex="-1"
              >
                <div
                  class="c19"
                  style="flex: 0 0 0px;"
                />
                <div
                  class="c20"
                  style="flex: 0 0 1px;"
                >
                  <div
                    aria-label="Lower Bounds"
                    aria-valuemax="4.8999999999999995"
                    aria-valuemin="2.0999999999999996"
                    aria-valuenow="2.0999999999999996"
                    class="c21"
                    role="slider"
                    style="cursor: col-resize; outline: none; min-width: 12px; min-height: 12px; z-index: 1;"
                    tabindex="0"
                  >
                    <div
                      class="c22 EdgeControl__StyledBox-sc-1xo2yt9-0"
                    />
                  </div>
                </div>
                <div
                  class="c23"
                  style="flex: 3.8 0 0px; cursor: ew-resize;"
                />
                <div
                  class="c20"
                  style="flex: 0 0 1px;"
                >
                  <div
                    aria-label="Upper Bounds"
                    aria-valuemax="4.8999999999999995"
                    aria-valuemin="2.0999999999999996"
                    aria-valuenow="4.8999999999999995"
                    class="c21"
                    role="slider"
                    style="cursor: col-resize; outline: none; min-width: 12px; min-height: 12px; z-index: 1;"
                    tabindex="0"
                  >
                    <div
                      class="c22 EdgeControl__StyledBox-sc-1xo2yt9-0"
                    />
                  </div>
                </div>
                <div
                  class="c19"
                  style="flex: 0 0 0px;"
                />
              </div>
              <span
                class="c24"
                style="width: 0px;"
              >
                4.8999999999999995
              </span>
            </div>
          </div>
        </div>
        <div
          class="c5"
        />
        <footer
          class="c3"
        >
          <button
            class="c25"
            type="submit"
          >
            Apply filters
          </button>
          <div
            class="c26"
          />
          <button
            aria-hidden="true"
            class="c27 c28"
            disabled=""
            tabindex="-1"
            type="reset"
          >
            Undo changes
          </button>
        </footer>
      </div>
    </form>
  </div>
</div>
`;
